# pi_git_backup

./: README.md
benchmark/: main_control.py  master_benchmark.sh  monitor_runtime.sh  ultimate_audit.sh
cpp_tracking/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  pi_log_20251229_134914.csv  pi_log_20251229_135251.csv  pi_log_20251229_143652.csv  pi_log_20251229_143847.csv  pi_log_20251229_145316.csv  pi_track
cpu_test/: cpu_check.sh  full_audit_cpu.sh  run_final_test.sh
mediamtx/: mediamtx.yml
stream_cam/: main_pi_stream.py  main_pi_stream_v2.py  main_pi_stream_v3.py  siyi_stream.py
stream_cam/tracking_gimbal/: .track_v4_log_20251230_163844.csv.swp  auto_land_log_20251229_174945.csv  main_pi_track_gstreamer.py  main_pi_tracking.py  main_pi_tracking_vip.py  pi_auto_land.py  pi_track_log_20251226_112620.csv  pi_track_opt_log_20251229_164649.csv  pi_track_opt_log_20251229_165207.csv  pi_track_opt_log_20251229_165723.csv  pi_track_pose_log_20251229_173849.csv  pi_track_pose_log_20251229_175520.csv  pi_track_pose_log_20251229_175625.csv  pi_track_pose_log_20251230_090006.csv  pi_tracking.py  pi_tracking_opt.py  reset_center.py  set_home.py  track_fix_log_20251230_090812.csv  track_v4_log_20251230_111721.csv  track_v4_log_20251230_163844.csv  track_v4_log_20251230_171808.csv  track_v4_log_20251231_154300.csv  track_v4_log_20251231_164314.csv  track_v4_log_20251231_171417.csv  track_v4_log_20260105_152320.csv  track_v5_log_20251231_165949.csv  track_vip_log_20251230_091738.csv  track_vip_log_20251230_091926.csv  (+1 more)
(+66 files in other folders)
